Remove Asciidoctor plugins